--- a/design/default_2/sass/_template_post.scss
+++ b/design/default_2/sass/_template_post.scss
@@ -24,7 +24,6 @@
 
 .post__item-info {
   margin-top: 20px;
-  margin-right: 10px;
 
   &:last-of-type {
     margin-right: 0;
@@ -41,6 +40,10 @@
       line-height: 16px;
     }
   }
+}
+
+.post__item-img {
+  text-align: center;
 }
 
 .post__item-commetns {
