--- a/design/default_2/sass/_template_post.scss
+++ b/design/default_2/sass/_template_post.scss
@@ -1,191 +1,203 @@
 .post {
-  padding: 30px 0;
-  background-color: #f5f5f5;
+  position: relative;
 }
 
 .post__crumbles {
   display: none;
 }
 
+.post__image {
+  position: relative;
+  margin-top: 15px;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  padding-bottom: 51.25%;
+  background-color: #f5f5f5;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.post__data {
+  padding-top: 5%;
+  padding-right: 15.25%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .post__title {
-  margin-top: 30px;
-  padding-bottom: 10px;
-  font-family: "Rubik",sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 22px;
-  text-transform: uppercase;
-  text-align: center;
-  color: #23292f;
-  border-bottom: 1px solid #ceedfa;
+  line-height: 32px;
+  color: #fff;
 }
 
-
-
-.post__item-info {
-  margin-top: 20px;
-  margin-right: 10px;
-
-  &:last-of-type {
-    margin-right: 0;
-  }
-
-  span {
-    display: inline-block;
-    font-size: 13px;
-    line-height: 16px;
-    color: $active-color;
-
-    svg {
-      margin-right: 5px;
-      line-height: 16px;
-    }
-  }
-}
-
-.post__item-commetns {
-  margin-left: 10px;
-}
-
-.post__text {
-  font-weight: 400;
-  color: #23292f;
-  p {
-    margin: 10px 0;
-  }
-}
-
-.post__back-forward {
-  margin-top: 25px;
-}
-
-.post__prev-page-link,
-.post__next-page-link {
-  font-family: "Rubik",sans-serif;
-  text-transform: uppercase;
-  line-height: 20px;
-  color: $active-color;
+.post__date {
+  position: absolute;
+  left:  auto;
+  bottom: 5px;
+  font-size: 14px;
+  color: #fff;
 
   svg {
-    vertical-align: middle;
+    margin-right: 14px;
   }
 }
 
-.post__prev-page-link {
-  float: left;
+.post__user-content {
+  padding: 15px 0 30px;
+
+  p:not(:last-child) {
+    margin-bottom: 15px;
+  }
 }
 
-.post__next-page-link {
-  float: right;
-}
+.post__siblings{
+  margin-bottom: 15px;
 
-.post__tabs {
-  margin-top: 30px;
-} 
-
-.post__tabs-left{
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-  font-weight: bold;
-  font-size: 16px;
-  color: $active-color;
-  border: 1px solid #ebebeb;
-  background: #fff;
-  text-transform: uppercase;
-  transition: 0.3s all ease;
-
-  &:hover,
-  &.active {
-    background: #fff;
+  &-title {
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 1;
+    font-weight: bold;
+    color: #000;
   }
 
-  &.active::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin-right: -1px;
-    width: 1px;
-    height: 100%;
-    background-color: #fff;
+  &-link {
+    line-height: 22px;
+    color: $active-color;
+    font-weight: bold;
+    
+    svg {
+      vertical-align: baseline;
+    }
+
+    &:hover {
+      color: #757575;
+    }
+
+    &--prev {
+      float: left;
+      margin-bottom: 8px;
+      svg {
+        margin-right: 8px;
+      }
+    }
+
+    &--next {
+      float: right;
+      svg {
+        margin-left: 8px;
+      }
+    }
   }
 }
 
 .post__comments {
-  position: relative;
-  margin-top: 20px;
-  padding: 20px;
-  width: 100%;
-  min-height: 129px;
-  background-color: #fff;
-  border: 1px solid #ebebeb;
-  border-top: 2px solid #12a4dd;
-}
+  margin-bottom: 24px;
 
+  &-title {
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 1;
+    font-weight: bold;
+    color: #000;
+  }
+}
 
 @media (min-width: 768px) {
 
-  .post {
-    padding: 30px 0 40px;
-  }
-
   .post__crumbles {
     display: block;
-    padding-bottom: 0;
+  }
+  
+  .post__image {
+    margin-bottom: 20px;
+    padding-bottom: 37.45%;
+  }
+
+  .post__data {
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0;
+    height:  auto;
+    text-align: center;
   }
 
   .post__title {
-    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 24px;
+  }
+  
+  .post__date {
+    position: static;
+    display: inline-block;
+  }
+
+  .post__user-content {
+    padding-bottom: 30px;
+  }
+}
+
+@media (min-width: 1024px) {
+
+  .post__siblings{
     margin-bottom: 25px;
-    padding: 30px 0;
-  } 
-
-
-  .post__tabs-left {
-    position: relative;
-    width: 30%;
-    float: left;
-    border-right: none;
-
-    &::before {
-      content: '';
-      position: absolute;
-      z-index: 2;
-      top: 1px;
-      right: -2px;
-      width: 2px;
-      height: 42px;
-      background-color: #fff;
+    &-title {
+      margin-bottom: 15px;
+      font-size: 24px;
     }
   }
 
   .post__comments {
-    margin-top: 0;
-    float: left;
-    width: 70%;
+    margin-bottom: 40px;
+
+    &-title {
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
   }
 }
 
-
-@media (min-width: 1024px) {
-
-  .post__title {
-    font-size: 34px;
-    line-height: 45px;
+@media (min-width: 1280px) {
+  .post__image {
+    margin-top: 30px;
+    padding-bottom: 37.45%;
   }
 
-  .post__item-info {
-    span {
+  .post__title {
+    margin-bottom: 30px;
+    font-size: 36px;
+    line-height: 42px;
+  }
+
+  .post__date {
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  .post__user-content {
+    padding: 25px 0 40px;
+  }
+
+  .post__siblings{
+    margin-bottom: 32px;
+    &-title {
+      margin-bottom: 20px;
+      font-size: 32px;
+    }
+
+    &-link {
       font-size: 16px;
     }
   }
 
-  .post__back-forward {
-    margin-top: 45px;
-  }
-
   .post__comments {
-    padding: 40px;
+    &-title {
+      font-size: 32px;
+    }
   }
 }
